package praktikum8;

public interface Destroyable {
    void destroyed();
}
