package praktikum8;

public class Plant {
    public void doDestroy(Destroyable d) {
        d.destroyed();
    }
}
